src/clients/snapshots/cake__clients__chat_completions__tests__build_messages_grouped_function_calls.snap
---
source: src/clients/chat_completions.rs
expression: msgs
---
[
  {
    "role": "user",
    "content": "do stuff"
  },
  {
    "role": "assistant",
    "content": null,
    "tool_calls": [
      {
        "id": "call-1",
        "type": "function",
        "function": {
          "name": "bash",
          "arguments": "{\"cmd\":\"ls\"}"
        }
      },
      {
        "id": "call-2",
        "type": "function",
        "function": {
          "name": "read",
          "arguments": "{\"path\":\"foo.txt\"}"
        }
      }
    ]
  },
  {
    "role": "tool",
    "content": "file.txt",
    "tool_call_id": "call-1"
  },
  {
    "role": "tool",
    "content": "contents",
    "tool_call_id": "call-2"
  }
]
