src/clients/snapshots/cake__clients__chat_completions__tests__build_messages_reasoning_with_assistant_text.snap
---
source: src/clients/chat_completions.rs
expression: msgs
---
[
  {
    "role": "user",
    "content": "think"
  },
  {
    "role": "assistant",
    "content": "done",
    "reasoning_content": "internal reasoning"
  }
]
