src/clients/snapshots/cake__clients__chat_completions__tests__build_messages_simple_conversation.snap
---
source: src/clients/chat_completions.rs
expression: msgs
---
[
  {
    "role": "system",
    "content": "You are helpful."
  },
  {
    "role": "user",
    "content": "Hello"
  }
]
